--- a/apps/so/css/tables.css
+++ b/apps/so/css/tables.css
@@ -1,11 +1,17 @@
+.container {
+	width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
 .container_table { 
 
 	/*border: 5px solid yellow;*/
 	bottom: 10px;
 	top: 10px;
 	position: absolute;
-	right: 10px;
-	left: 10px;
+	right: 5px;
+	left: 5px;
 	overflow: hidden;
 }
 
